--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                         <label for="comentarios" class="form-label">Dejanos tus comentarios</label>
                         <textarea class="form-control" id="comentarios" rows="3" name="comentarios"></textarea>
                     </div>
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/thankyou.html">
+                    <input type="hidden" name="_next" value="https://eugesorgetti.github.io/zengarden/thankyou.html">
                     <button class="button-primary">Enviar formulario</button>
                 </form>
             </div>
