--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@
                     </a>
                 </div>
                 <div class="d-flex gap-3 justify-content-center">
-                    <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-                    <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="bi bi-youtube"></i></a>
-                    <a href="#" target="_blank"><i class="bi bi-pinterest"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+                    <a href="http://www.youtube.com/" target="_blank"><i class="bi bi-youtube"></i></a>
+                    <a href="https://pinterest.com/" target="_blank"><i class="bi bi-pinterest"></i></a>
                 </div>
             </div>
             <div class="col col-12 col-lg-4 p-md-5 info">
