--- a/thankyou.html
+++ b/thankyou.html
@@ -52,15 +52,15 @@
         <div class="row">
             <div class="col col-12 col-lg-4 p-3 p-md-5">
                 <div class="d-flex justify-content-center">
-                    <a href="#home">
+                    <a href="index.html">
                         <img src="assets/logo.png" alt="Logo ZenGarden">
                     </a>
                 </div>
                 <div class="d-flex gap-3 justify-content-center">
-                    <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-                    <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="bi bi-youtube"></i></a>
-                    <a href="#" target="_blank"><i class="bi bi-pinterest"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+                    <a href="http://www.youtube.com/" target="_blank"><i class="bi bi-youtube"></i></a>
+                    <a href="https://pinterest.com/" target="_blank"><i class="bi bi-pinterest"></i></a>
                 </div>
             </div>
             <div class="col col-12 col-lg-4 p-md-5 info">
